--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -50,6 +50,7 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "ini":"2.0.0",
         "chalk": "^4.1.0",
         "figlet": "^1.3.0",
         "minimist": "^1.2.5",
