--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.0.3",
+    "version": "2.0.4",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -23,34 +23,34 @@
         "fix": "rm -rf node_modules && rm package-lock.json && npm install",
         "build": " tsc -p tsconfig.build.json",
         "format": "prettier --write \"**/*.ts\" **/*.js *.json *.md",
-        "lint": "eslint 'lib/**/*.ts' --fix",
-        "test": "jest --config ./test/jest.config.json --runInBand",
-        "release": "release-it"
+        "lint": "eslint 'lib/**/*.ts' --fix"
     },
     "devDependencies": {
-        "@types/figlet": "^1.2.1",
-        "@types/jest": "^26.0.19",
+        "@types/figlet": "^1.5.1",
+        
         "@types/minimist": "^1.2.1",
-        "@types/node": "^14.14.16",
-        "@types/supertest": "^2.0.10",
-        "@typescript-eslint/eslint-plugin": "^4.11.0",
-        "@typescript-eslint/parser": "^4.11.0",
-        "eslint": "^7.16.0",
-        "eslint-config-prettier": "^7.1.0",
+        "@types/node": "^15.0.2",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^4.22.1",
+        "@typescript-eslint/parser": "^4.22.1",
+        "eslint": "^7.26.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.22.1",
-        "jest": "^26.6.3",
-        "prettier": "^2.2.1",
+        "hosted-git-info": "4.0.2",
+        
+        "lodash": "4.17.21",
+        "prettier": "^2.3.0",
         "reflect-metadata": "^0.1.13",
-        "release-it": "^14.2.2",
-        "supertest": "^6.0.1",
-        "ts-jest": "^26.4.4",
-        "ts-loader": "^8.0.12",
+        
+        "supertest": "^6.1.3",
+        
+        "ts-loader": "^9.1.2",
         "ts-node": "^9.1.1",
         "tsconfig-paths": "^3.9.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.2.4"
     },
     "dependencies": {
-        "chalk": "^4.1.0",
+        "chalk": "^4.1.1",
         "figlet": "^1.5.0",
         "ini": "2.0.0",
         "minimist": "^1.2.5",
