--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "preferGlobal": true,
     "main": "dist/index.js",
     "scripts": {
-        "start": "node ./dist/webdav-cli.cli.js --username root --password root",
+        "start": "node ./dist/webdav-cli.cli.js --username root --password root --host 0.0.0.0",
         "build": " tsc -p tsconfig.build.json",
         "format": "prettier --write \"**/*.ts\" **/*.js *.json *.md"
     },
