--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
+        "esModuleInterop": true,
         "strict": true,
         "module": "commonjs",
         "declaration": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "target": "es2017",
+        "target": "esnext",
         "sourceMap": false,
         "outDir": "./dist",
         "baseUrl": "./",
