--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.0.9",
+    "version": "2.1.0",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -24,6 +24,7 @@
         "format": "prettier --write \"**/*.ts\" **/*.js *.json *.md"
     },
     "devDependencies": {
+        "@types/etag": "^1.8.0",
         "@types/minimist": "^1.2.1",
         "@types/node": "^15.12.2",
         "hosted-git-info": "4.0.2",
@@ -33,6 +34,7 @@
         "typescript": "^4.3.2"
     },
     "dependencies": {
+        "etag": "^1.8.1",
         "minimist": "^1.2.5",
         "webdav-server": "^2.6.2"
     },
