--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.1.1",
+    "version": "2.1.2",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "@types/etag": "^1.8.0",
+        "@types/fresh": "^0.5.0",
         "@types/minimist": "^1.2.1",
         "@types/node": "^15.12.2",
         "hosted-git-info": "4.0.2",
@@ -35,6 +36,7 @@
     },
     "dependencies": {
         "etag": "^1.8.1",
+        "fresh": "^0.5.2",
         "minimist": "^1.2.5",
         "webdav-server": "^2.6.2"
     },
