--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
         "skipLibCheck": true
     },
     "include": ["src/**/*", "test/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
