--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
         "@types/etag": "^1.8.0",
         "@types/fresh": "^0.5.0",
         "@types/koa": "^2.13.3",
-        "@types/koa__cors": "^3.0.2",
         "@types/koa-compress": "^4.0.1",
         "@types/koa-conditional-get": "^2.0.0",
         "@types/koa-etag": "^3.0.0",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-range": "^0.3.2",
         "@types/koa-static": "^4.0.1",
+        "@types/koa__cors": "^3.0.2",
         "@types/minimist": "^1.2.1",
         "@types/node": "^15.12.2",
         "hosted-git-info": "4.0.2",
@@ -47,6 +47,7 @@
         "@masx200/koa-stream-etag": "^5.0.3",
         "etag": "^1.8.1",
         "fresh": "^0.5.2",
+        "http-auth": "^4.1.5",
         "koa": "^2.13.1",
         "koa-compress": "^5.0.1",
         "koa-conditional-get": "^3.0.0",
