--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
+        "moduleResolution": "Node",
         "esModuleInterop": true,
         "strict": true,
-        "module": "commonjs",
+        "module": "esnext",
         "declaration": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
