--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dependencies": {
         "@koa/cors": "^3.1.0",
         "@masx200/koa-stream-etag": "^5.0.3",
+        "@masx200/serve-cli": "^1.1.1",
         "etag": "^1.8.1",
         "fresh": "^0.5.2",
         "http-auth": "^4.1.5",
