--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-yarn.lock
+#yarn.lock
 .vscode/settings.json
 package-lock.json
