--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.3.2",
+    "version": "2.3.3",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -54,6 +54,7 @@
         "@masx200/koa-range": "^1.0.4",
         "@masx200/koa-stream-etag": "^5.0.3",
         "@masx200/serve-cli": "^1.2.0",
+        "builtin-modules": "^3.2.0",
         "etag": "^1.8.1",
         "fresh": "^0.5.2",
         "graceful-fs": "^4.2.6",
@@ -66,6 +67,7 @@
         "koa-static": "^5.0.0",
         "koa2-serve-index": "^2.0.1",
         "minimist": "^1.2.5",
+        "rollup-plugin-node-externals": "^2.2.0",
         "webdav-server": "^2.6.2"
     },
     "directories": {
