--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # compiled output
 #/dist
 /node_modules
-
+.yarn/unplugged
 # Logs
 logs
 *.log
@@ -35,3 +35,6 @@ lerna-debug.log*
 #yarn.lock
 .vscode/settings.json
 package-lock.json
+*.zip
+*.gz
+*.py
