--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "start": "node ./dist/webdav-cli.cli.js --username root --password root --host 0.0.0.0",
-        "build": " rollup -c rollup.config.js",
+        "build": " rollup -c rollup.config.mjs",
         "format": "npx prettier --write \"**/*.ts\" **/*.js *.json *.md"
     },
     "devDependencies": {
@@ -34,20 +34,21 @@
         "@types/koa-compress": "^4.0.1",
         "@types/koa-conditional-get": "^2.0.0",
         "@types/koa-etag": "^3.0.0",
-        "@types/koa-logger": "^3.1.1",
+        "@types/koa-logger": "^3.1.2",
         "@types/koa-range": "^0.3.2",
         "@types/koa-static": "^4.0.1",
         "@types/koa__cors": "^3.0.2",
         "@types/minimist": "^1.2.1",
-        "@types/node": "^15.12.2",
-        "hosted-git-info": "4.0.2",
-        "prettier": "^2.3.1",
+        "@types/node": "^17.0.33",
+        "hosted-git-info": "^5.0.0",
+        "prettier": "^2.6.2",
         "reflect-metadata": "^0.1.13",
-        "rollup": "^2.56.0",
+        "rollup": "^2.72.1",
+        "rollup-plugin-node-externals": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-ts": "^1.4.0",
-        "tsconfig-paths": "^3.9.0",
-        "typescript": "^4.3.2"
+        "rollup-plugin-ts": "^2.0.7",
+        "tsconfig-paths": "^4.0.0",
+        "typescript": "^4.6.4"
     },
     "dependencies": {
         "@koa/cors": "^3.1.0",
@@ -67,7 +68,6 @@
         "koa-static": "^5.0.0",
         "koa2-serve-index": "^2.0.1",
         "minimist": "^1.2.5",
-        "rollup-plugin-node-externals": "^2.2.0",
         "webdav-server": "^2.6.2"
     },
     "directories": {
