--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "registry": "https://registry.npmjs.com"
     },
     "name": "@masx200/webdav-cli",
-    "version": "2.3.4",
+    "version": "3.0.0",
     "description": "A simple zero-configuration command-line webdav server",
     "license": "MIT",
     "keywords": [
@@ -17,11 +17,12 @@
     "bin": "dist/webdav-cli.cli.js",
     "preferGlobal": true,
     "main": "dist/index.js",
+    "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
         "start": "node ./dist/webdav-cli.cli.js --username root --password root --host 0.0.0.0",
         "build": " rollup -c rollup.config.mjs",
-        "format": "npx prettier --write \"**/*.ts\" **/*.js *.json *.md"
+        "format": "npx prettier --write \"**/*.ts\" **/*.js *.json *.md *.mjs"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^22.0.0",
@@ -48,6 +49,7 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^2.0.7",
         "tsconfig-paths": "^4.0.0",
+        "rollup-external-modules": "^2.0.0",
         "typescript": "^4.6.4"
     },
     "dependencies": {
