--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "format": "npx prettier --write \"**/*.ts\" **/*.js *.json *.md *.mjs"
     },
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^22.0.0",
+        "@rollup/plugin-commonjs": "^22.0.1",
         "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^13.0.4",
+        "@rollup/plugin-node-resolve": "^13.3.0",
         "@types/etag": "^1.8.0",
         "@types/fresh": "^0.5.0",
         "@types/http-auth": "^4.1.0",
@@ -50,9 +50,10 @@
         "rollup-plugin-node-externals": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^3.0.2",
+        "terser": "^5.14.2",
         "tsconfig-paths": "^4.0.0",
         "typescript": "^4.7.3",
-        "undici": "^5.5.1",
+        "undici": "^5.8.0",
         "vitest": "^0.15.0"
     },
     "dependencies": {
@@ -85,6 +86,7 @@
     "homepage": "https://github.com/masx200/webdav-cli#readme",
     "resolutions": {
         "debug": "4.3.2",
+        "terser": "^5.14.2",
         "object-path": "0.11.8"
     },
     "packageManager": "yarn@3.2.0"
