--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+    "overrides": {
+        "@koa/cors": "^5.0.0"
+    },
+    "resolutions": {
+        "@koa/cors": "^5.0.0"
+    },
     "version": "3.1.1",
     "type": "module",
     "publishConfig": {
