--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@rollup/plugin-commonjs": "^26.0.1",
         "@rollup/plugin-json": "^6.0.0",
         "@rollup/plugin-node-resolve": "^15.0.1",
+        "@swc/core": "^1.7.26",
         "@types/etag": "^1.8.0",
         "@types/fresh": "^0.5.0",
         "@types/http-auth": "^4.1.0",
@@ -56,6 +57,7 @@
         "rollup": "^3.29.5",
         "rollup-external-modules": "^2.0.0",
         "rollup-plugin-node-externals": "^7.0.0",
+        "rollup-plugin-swc": "^0.2.1",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^3.4.5",
         "terser": "^5.14.2",
